[gd_scene load_steps=6 format=3 uid="uid://b5ldcsi1k8i14"]

[ext_resource type="FontFile" uid="uid://ct4y3rnndcu5n" path="res://Assets/Fonts/Rubik/static/Rubik-Medium.ttf" id="1_l5c5q"]
[ext_resource type="Script" path="res://Game/UI/small_placement.gd" id="1_tglen"]
[ext_resource type="FontFile" uid="uid://cdwlkjegxsf3m" path="res://Assets/Fonts/catshop/CatShop.ttf" id="2_22yt2"]
[ext_resource type="FontFile" uid="uid://bbcr4m4d7iemb" path="res://Assets/Fonts/GreekSprt/NotoSerifDisplay-Medium.ttf" id="3_k3vdw"]
[ext_resource type="FontFile" uid="uid://dkfstxdl3jabk" path="res://Assets/Fonts/Rubik/static/Rubik-SemiBold.ttf" id="4_kfcdv"]

[node name="SmallPlacement" type="HBoxContainer"]
theme_override_constants/separation = 30
script = ExtResource("1_tglen")

[node name="place" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_l5c5q")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "4."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NotFirstSecThird" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NotFirstSecThird"]
layout_mode = 2

[node name="ElementName" type="RichTextLabel" parent="NotFirstSecThird/HBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_22yt2")
theme_override_fonts/mono_font = ExtResource("3_k3vdw")
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/mono_font_size = 22
bbcode_enabled = true
text = "[wave]m[code]Î¾"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Control" type="Control" parent="NotFirstSecThird/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="player" type="RichTextLabel" parent="NotFirstSecThird/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_l5c5q")
theme_override_fonts/bold_font = ExtResource("4_kfcdv")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[color=black][pulse][b]SIXTEENCHARACTER"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="IsotopeSum" type="RichTextLabel" parent="NotFirstSecThird"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/default_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/normal_font = ExtResource("1_l5c5q")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "(99+99+99)"
fit_content = true
scroll_active = false
autowrap_mode = 0
